--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,14 @@
         <div id="mapid" class="col-10 shadow"></div>
         <div class="col-2 shadow">
           Menu
-          <p>
-            <button id="run">Run</button>
-          </p>
+          <div class="d-grid gap-2">
+            <button id="run" type="button" class="btn btn-primary btn-lg text-nowrap">
+              Run
+            </button>
+            <button id="draw-area" type="button" class="btn btn-secondary text-nowrap disabled">
+              Draw Area (Experimental)
+            </button>
+          </div>
         </div>
       </div>
     </div>
